# plop-tui

./: Cargo.toml  README.md
.github/workflows/: ci.yml  create_new_tag.yml  release.yml
src/: lib.rs  main.rs
src/app/: action.rs  actions.rs  mod.rs  ui.rs
src/inputs/: events.rs  key.rs  mod.rs
src/io/: handler.rs  mod.rs  network.rs
