[package]
name = "plop-tui"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"

# Waiting [PR](https://github.com/gin66/tui-logger/pull/17) to be merged
# tui-logger = "0.6"
tui-logger = { git = "https://github.com/ilaborie/tui-logger", branch = "feature/bump-dependencies" }

tui = { version = "0.15", features = ["crossterm"], default-features = false }
crossterm = "0.19"
tokio = { version = "1", features = ["full"] }

eyre = "0.6"
