[package]
name = "plop-tui"
version = "0.1.1"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ilaborie/plop-tui"

[dependencies]
log = "0.4"

tui-logger = "0.7"

tui = { version = "0.16", features = ["crossterm"], default-features = false }
crossterm = "0.22"
tokio = { version = "1", features = ["full"] }

eyre = "0.6"
