[package]
name = "plop-tui"
version = "0.1.2"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ilaborie/plop-tui"

[dependencies]
log = "0.4"

tui-logger = "0.7"

tui = "0.17"
crossterm = "0.23"
tokio = { version = "1", features = ["full"] }

eyre = "0.6"
